app structure created

--- a/app/views/components/header.ejs
+++ b/app/views/components/header.ejs
@@ -1,6 +1,9 @@
 <nav>
     <ul>
-        <li>Home 2</li>
-        <li>About 2</li>
+        <li>Home </li>
+        <li>About </li>
+        <li>contacts </li>
+        <li>projects </li>
+        <li>services </li>
     </ul>
 </nav>
