--- a/app/views/content/home.ejs
+++ b/app/views/content/home.ejs
@@ -1,2 +1,2 @@
-<%= title %> <br>
-    hello world from controller 2
+    hello world from <%= title %>
+    <img src="./content/images/legends.jpg"
